Popravljena funkcija Save i Load board

--- a/visionboard/whiteboard.html
+++ b/visionboard/whiteboard.html
@@ -15,6 +15,7 @@
             <button id="addImageBtn">+ Slika</button>
             <button id="addQuoteBtn">+ Citat</button>
             <button id="saveBtn">Snimi</button>
+            <button id="loadBtn">Učitaj board</button>
             <button id="clearBtn">Očisti ploču</button>
 
         </div>
