--- a/StudentFunZone.html
+++ b/StudentFunZone.html
@@ -28,7 +28,7 @@
 <ul>
             <li><a href="bingo.html">Bingo</a></li>
             <li><a href="kviz.html">Kviz</a></li>
-			<li><a href="visionboard/whiteboard.html">Interaktivni Vision Board</a></li>
+			<li><a href="visionboard/visionboard.html">Interaktivni Vision Board</a></li>
             
         </ul>
         
