--- a/StudentFunZone.html
+++ b/StudentFunZone.html
@@ -26,7 +26,7 @@
         <p>Odaberite jednu igru!</p>
 	
 	<ul>
-			<li><a href="bingo.html">Bingo</a></li>
+			<li><button id="bingoBtn" class="link-button" data-src="bingo/index.html">Bingo</button></li>
 			<li><button id="quizBtn" class="link-button" data-src="kviz_index.html">Kviz</button></li>
 			<li><button id="visionboardBtn" class="link-button" data-src="visionboard/visionboard.html">Interaktivni Vision Board</button></li>
 			<li><button id="visionBtn" class="link-button" data-src="whiteboard/whiteboard.html">Interaktivni Whiteboard</button></li>
